--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -823,8 +823,9 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
       List<Rollup__mdt> metas = new List<Rollup__mdt>(wrapper.rollupMetadata);
       Map<Schema.SObjectType, List<Rollup>> typeToWinnowedRollups;
       wrapper.flowInput.recordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.recordsToRollup, metas);
-      wrapper.flowInput.oldRecordsToRollup = replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.oldRecordsToRollup, metas);
-      Map<Id, SObject> oldFlowRecords = RollupFieldInitializer.Current.createSafeMap(wrapper.flowInput.oldRecordsToRollup);
+      Map<Id, SObject> oldFlowRecords = RollupFieldInitializer.Current.createSafeMap(
+        replaceFlowInputCalcItemsIfNecessary(hashCodeToCalcItems, wrapper.flowInput.oldRecordsToRollup, metas)
+      );
 
       if (wrapper.flowInput.deferProcessing) {
         typeToWinnowedRollups = new Map<Schema.SObjectType, List<Rollup>>{ wrapper.sObjectType => new List<Rollup>() };
@@ -2089,9 +2090,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
           meta,
           query + (String.isNotBlank(meta.CalcItemWhereClause__c) ? ' AND ' + meta.CalcItemWhereClause__c : '')
         );
-        if (rollups.containsKey(calcItemSObjectType)) {
-          rollups.get(calcItemSObjectType).clear();
-        }
+        rollups.get(calcItemSObjectType)?.clear();
         wrappedMeta.recordIds.addAll(queryWrapper.recordIds);
         wrappedMeta.typeToOldIntermediateParents.putAll(queryWrapper.typeToOldIntermediateParents);
         if (wrappedMeta.recordIds.isEmpty() == false) {
@@ -2121,7 +2120,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     // collapse delete/full recalc operations
     for (String deleteKey : deleteKeyToReparentOp.keySet()) {
       DeleteReparentOperation deleteReparentOp = deleteKeyToReparentOp.get(deleteKey);
-      SObjectType deleteSObjectType = deleteReparentOp.reparentedRecords.getSObjectType();
+      Schema.SObjectType deleteSObjectType = deleteReparentOp.reparentedRecords[0].getSObjectType();
       Rollup deleteProcessor = getRollup(
         deleteReparentOp.rollupMetas,
         deleteSObjectType,
@@ -2734,11 +2733,12 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     Evaluator eval,
     InvocationPoint rollupInvokePoint
   ) {
-    if (rollupInvokePoint == InvocationPoint.FROM_APEX || rollupInvokePoint == InvocationPoint.FROM_INVOCABLE) {
-      // if (rollupInvokePoint == InvocationPoint.FROM_APEX) {
-      calcItems = CALC_ITEM_REPLACER.replace(calcItems, rollupOperations);
-      if (oldCalcItems?.isEmpty() == false) {
-        oldCalcItems = new Map<Id, SObject>(CALC_ITEM_REPLACER.replace(oldCalcItems.values(), rollupOperations));
+    switch on rollupInvokePoint {
+      when FROM_APEX, FROM_INVOCABLE {
+        calcItems = CALC_ITEM_REPLACER.replace(calcItems, rollupOperations);
+        if (oldCalcItems?.isEmpty() == false) {
+          oldCalcItems = new Map<Id, SObject>(CALC_ITEM_REPLACER.replace(oldCalcItems.values(), rollupOperations));
+        }
       }
     }
 
