--- a/rollup/core/classes/Rollup.cls
+++ b/rollup/core/classes/Rollup.cls
@@ -43,6 +43,7 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
   protected Rollup__mdt metadata;
   protected Boolean isFullRecalc = false;
   protected Boolean isNoOp;
+  protected Boolean isNoOpOverridden = false;
   protected Boolean isCDCUpdate = false;
   protected Integer queryCount;
   protected RollupCalcItemReplacer calcItemReplacer;
@@ -704,7 +705,11 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     global transient List<SObject> recordsToRollup = new List<SObject>();
     @InvocableVariable(label='Prior records to rollup' description='The old version of the records for update/upsert')
     global transient List<SObject> oldRecordsToRollup = new List<SObject>();
-
+    @InvocableVariable(
+      label='Parent Record Id for Empty Children Collections'
+      description='Runs rollup calculations even if no matching children when passed. Must also fill out Child Object Type When Rollup Started From Parent property'
+    )
+    global Id parentRecordIdForEmptyChildrenCollections;
     @InvocableVariable(
       label='Should rollup to ultimate hierarchy parent'
       description='Used in conjunction with Ultimate Parent Field to drive hierarchical parent rollups'
@@ -741,11 +746,15 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
     private final Set<Rollup__mdt> rollupMetadata = new Set<Rollup__mdt>();
     private final Map<Id, SObject> children = new Map<Id, SObject>();
     private final Map<Id, SObject> oldChildren = new Map<Id, SObject>();
+    private final Boolean shouldOverrideNoOp;
 
     private FlowInputWrapper(FlowInput flowInput, String rollupContext, SObjectType sObjectType) {
       this.flowInput = flowInput;
       this.rollupContext = rollupContext;
       this.sObjectType = sObjectType;
+      this.shouldOverrideNoOp =
+        this.flowInput.parentRecordIdForEmptyChildrenCollections != null &&
+        this.flowInput.calcItemTypeWhenRollupStartedFromParent != null;
     }
   }
 
@@ -771,6 +780,17 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
 
       flowInput.rollupOperation = flowInput.rollupOperation.toUpperCase();
       RollupLogger.Instance.log('processing invocable data:', flowInput, LoggingLevel.INFO);
+
+      if (
+        flowInput.parentRecordIdForEmptyChildrenCollections != null &&
+        flowInput.calcItemTypeWhenRollupStartedFromParent != null &&
+        flowInput.recordsToRollup?.isEmpty() == true
+      ) {
+        Schema.DescribeSObjectResult childDescribe = RollupFieldInitializer.Current.getDescribeFromName(flowInput.calcItemTypeWhenRollupStartedFromParent);
+        SObject stubChild = childDescribe.getSObjectType().newSObject(childDescribe.getKeyPrefix() + '0'.repeat(12));
+        stubChild.put(flowInput.lookupFieldOnCalcItem, flowInput.parentRecordIdForEmptyChildrenCollections);
+        flowInput.recordsToRollup.add(stubChild);
+      }
 
       if (flowInput.recordsToRollup?.isEmpty() != false) {
         flowOutput.message = 'No records to rollup, returning early';
@@ -831,16 +851,19 @@ global without sharing virtual class Rollup implements RollupLogger.ToStringObje
         typeToWinnowedRollups = new Map<Schema.SObjectType, List<Rollup>>{ wrapper.sObjectType => new List<Rollup>() };
       }
 
-      processCustomMetadata(
-        typeToWinnowedRollups != null ? typeToWinnowedRollups : localRollups,
-        metas,
-        children,
-        oldFlowRecords,
-        new Set<String>(),
-        wrapper.rollupContext,
-        fromInvocable,
-        typeToWrappedMeta
-      );
+      Map<Schema.SObjectType, List<Rollup>> typeToLocalRollups = typeToWinnowedRollups != null ? typeToWinnowedRollups : localRollups;
+      processCustomMetadata(typeToLocalRollups, metas, children, oldFlowRecords, new Set<String>(), wrapper.rollupContext, fromInvocable, typeToWrappedMeta);
+
+      if (wrapper.shouldOverrideNoOp) {
+        List<Rollup> rollups = typeToLocalRollups.get(wrapper.sObjectType);
+        if (rollups != null) {
+          for (Rollup roll : rollups) {
+            roll.isNoOp = false;
+            roll.isNoOpOverridden = true;
+            roll.calcItems = children;
+          }
+        }
+      }
 
       if (typeToWinnowedRollups != null) {
         for (Schema.SObjectType typeKey : typeToWinnowedRollups.keyset()) {
